--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
+    "d3": "^7.9.0",
     "husky": "^9.1.7",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-google-charts": "^5.2.1",
+    "react-icons": "^5.4.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
