--- a/package.json
+++ b/package.json
@@ -7,19 +7,28 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
+  },
+
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
     "husky": "^9.1.7",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.4.0",
-    "recharts": "^2.15.0"
+    "react-redux": "^9.2.0",
+    "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redux-persist": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
