--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css,md}": "prettier --write"
   },
-
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
-    "husky": "^9.1.7",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -39,6 +37,7 @@
     "@types/redux-persist": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
